vaguely describe language interests a bit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 					<p class="lead">I'm a Software Engineer in the media and signalling team at <a href="https://www.starleaf.com/">StarLeaf</a>'s Watford office.</a></p>
 					
 					<p>I work as part of the R&amp;D team, developing and maintaining a range of applications and internal tools.
-					I primarily work with C++(17), but also make use of Python and occasionally Javascript.</p>
+					I primarily work with <a href="https://isocpp.org">C++(17)</a>, but also make use of <a href="https://python.org">Python</a> and occasionally Javascript.
+					I'm keen to make use of <a href="https://rust-lang.org">Rust</a>, and I'd like to have an excuse to play around with Lisps and functional languages.</p>
 				</section>
 				
 				<section id="mathematics">
