--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  main {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
   }
-  h1 {
+  main h1 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
@@ -16,9 +16,9 @@ layout: default
   }
 </style>
 
-<div class="container">
+<main>
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
-</div>
+</main>
