tidy up opengraph headers

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 		<meta name="author" content="David Robertson" />
 		
 		<meta property="og:image" content="https://dmrobertson.github.io/images/photo_head.jpg" />
-		<meta property="og:image:width" content="400" />
-		<meta property="og:image:height" content="263" />
+		<meta property="og:image:width" content="350" />
+		<meta property="og:image:height" content="350" />
 		<meta property="og:image:type" content="image/jpg" />
-		
+		<meta property="og:image:type" content="Photograph of David M. Robertson" />
+
 		<link rel="canonical" href="https://dmrobertson.github.io" />
 		<meta property="og:url" content="https://dmrobertson.github.io" />
 
