Improve styling of contact section

--- a/index.html
+++ b/index.html
@@ -141,19 +141,14 @@
 			</main>
 			<aside id="contact">
 				<h3>Contact Me</h3>
-				<address class="vcard">
+				<address>
 					<a href="images/photo_original.jpg">
-					<img class="photo img-responsive img-thumbnail" src="images/photo_head.jpg" srcset="images/photo_head.jpg 1x,images/photo_head_hires.jpg 2x" alt="Profile photograph from March 2019" /></a>
-
-					<span class="fn">David Robertson</span>
-					<p>
-						📧 <a class="email" href="mailto:davidr@element.io" title="Work email address">davidr@element.io</a><br />
-						📧 <a class="email" href="mailto:david.m.robertson1@gmail.com" title="Personal email address">david.m.robertson1@gmail.com</a>
-					</p>
-
+					<img src="images/photo_head.jpg" srcset="images/photo_head.jpg 1x,images/photo_head_hires.jpg 2x" alt="Profile photograph from March 2019" /></a>
 					<ul>
-				   <li class="github">GitHub: <a class="url" href="https://github.com/DMRobertson">DMRobertson</a></li>
-				   <li class="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/davidmrobertson1">davidmrobertson1</a></li>
+					    <li class="email">Work: <a href="mailto:davidr@element.io">davidr@element.io</a></li>
+						<li class="email">Personal: <a href="mailto:david.m.robertson1@gmail.com">david.m.robertson1@gmail.com</a></li>
+	 			        <li class="github">GitHub: <a class="url" href="https://github.com/DMRobertson">DMRobertson</a></li>
+					    <li class="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/davidmrobertson1">davidmrobertson1</a></li>
 				   </ul>
 				</address>
 			</aside>
