Minor text tweaks

--- a/index.html
+++ b/index.html
@@ -45,13 +45,18 @@
 				<section id="programming">
 					<h3>Programming</h3>
 					<p>
-						I like making robust software which solves real problems for real people.
-						I'm keen to make use of <a href="https://rust-lang.org">Rust</a>, and I'd like to have an excuse to play around with Lisps, functional languages, and new type systems.
+						I enjoy making robust software which solves real problems for real people.
+						I care deeply about my output—I want to be proud of the things I build.
 					</p>
 					<p>
 						Today, I primarily work with <a href="https://python.org">Python</a> and sometimes make use of <a
                         href="https://go.dev/">Go</a>.
 						I also have two years' commercial experience with <a href="https://isocpp.org">C++(17)</a>.
+					</p>
+					<p>
+						I'm keen to make use of <a href="https://rust-lang.org">Rust</a>, and I'd like to have an excuse to play around with Lisps, functional languages, and new type systems.
+					</p>
+
 					</p>
 
 					<h4 id="work-element">…at <a href="https://element.io">Element</a> (2021&ndash;)</h4>
@@ -100,14 +105,11 @@
 				</section>
 				
 				<section id="research">
-					<h3>Research</h3>
+					<h3>Research (2014&ndash;2018)</h3>
 					<p>
 						In my previous life, I was a PhD researcher in <a href="https://en.wikipedia.org/wiki/Geometric_group_theory">geometric group theory</a>.
-						I specialised in studying <a href="https://en.wikipedia.org/wiki/Thompson_groups">Thompson's groups</a>, culminating in my thesis <em><a href="https://theses.ncl.ac.uk/jspui/handle/10443/4727">Conjugacy and centralisers in Thompson's group <var>T</var></a></em>.
-					</p>
-					<p>
+						I specialised in studying <a href="https://en.wikipedia.org/wiki/Thompson_groups">Thompson's groups</a>, culminating in my thesis <em><a href="https://theses.ncl.ac.uk/jspui/handle/10443/4727">Conjugacy and centralisers in Thompson's group&nbsp;<var>T</var></a></em>.
 						As part of this, I wrote the <a href="https://github.com/DMRobertson/thompsons_v">thompson</a> Python package.
-						It's not the most efficient tool, but it's good enough for testing conjectures and making visualisations.
 					</p>
 					<p>
 						My thesis was never published as research articles, but I did contribute to <em><a href="https://dx.doi.org/10.1142/S0218196716500144">The power conjugacy problem in Higman-Thompson groups</a></em> (<a href="https://arxiv.org/abs/1503.01032">arχiv</a>).
@@ -136,6 +138,7 @@
 				</section>
 
 				<section id="interests">
+					<h3>Interests</h3>
 					I promise that I have hobbies and am therefore a very interesting person.
 				</section>
 			</main>
