Small pass on personal projects

--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
 					</ul>
 
 					<section id="personal-projects">
-						<h3>Software</h3>
+						<h3>Personal projects</h3>
+
 						<ul>
 							<li>Type annotations for pynacl and others?</li>
-							<li>Make a lisp</li>
-							<li><a href="https://github.com/DMRobertson/thompsons_v">thompson</a></li>
-							<li><a href="https://github.com/DMRobertson/tc4">Topological Connect Four</a></li>
-							<li><a href="https://github.com/DMRobertson/coding-demo">Coding theory demo</a></li>
-							<li><a href="https://github.com/DMRobertson/conundrum">Conundrum</a></li>
+							<li>A Rust <a href="https://github.com/DMRobertson/mal/tree/master/impls/rust-dmr">implementation</a> of the <a href="https://github.com/kanaka/mal">Make-a-Lisp</a> language</li>
+							<li><a href="https://dmrobertson.github.io/coding-demo/">Coding theory demo</a> (<a href="https://github.com/DMRobertson/coding-demo">source</a>)</li>
+							<li><a href="https://thompsons-v.readthedocs.io/">thompson</a> (<a href="https://github.com/DMRobertson/thompsons_v">source</a>)</li>
+							<li><a href="https://dmrobertson.github.io/tc4/">Topological Connect Four</a> (<a href="https://github.com/DMRobertson/tc4">source</a>)</li>
+							<li><a href="https://dmrobertson.github.io/conundrum/">Conundrum</a> (<a href="https://github.com/DMRobertson/conundrum">source</a>)</li>
 						</ul>
 					</section>
 
