another text pass

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 
 			<main>
 				<section id="headline">
-					<p>I'm a software engineer <a href="#work-element">working for Element</a> on the <a href="https://matrix.org/">Matrix protocol</a>.</p>
-
 					<p>
+						I'm a software engineer with four years' experience in the communications industry, specialising in backend development involving distributed systems.
+					</p>
+					<p>
+						I currently <a href="#work-element">work for Element</a> on the <a href="https://matrix.org/">Matrix protocol</a>.
 						Before that, I <a href="#work-starleaf">worked at StarLeaf</a> on video conferencing infrastructure.
 						Before <em>that</em>, I was a <a href="#research">mathematics PhD researcher</a>.
 					</p>
@@ -57,8 +59,6 @@
 						I'm keen to make use of <a href="https://rust-lang.org">Rust</a>, and I'd like to have an excuse to play around with Lisps, functional languages, and new type systems.
 					</p>
 
-					</p>
-
 					<h4 id="work-element">…at <a href="https://element.io">Element</a> (2021&ndash;)</h4>
 					<p>
 						I work as part of the <a href="https://github.com/matrix-org/synapse">Synapse</a> application team.
@@ -66,6 +66,7 @@
 					</p>
 					<ul>
 						<li>developing new features,</li>
+						<li>investigating performance problems,</li>
 						<li>triaging incoming issues,</li>
 						<li>reviewing team and community pull requests,</li>
 						<li>distributing releases, including coordination of security releases; and</li>
@@ -80,12 +81,14 @@
 
 					<h4 id="work-starleaf">…at <a href="https://starleaf.com">StarLeaf</a> (2018&ndash;2021)</h4>
 					<p>
-						I did X and was responsible for Y. Highlights from my two years there:
+						I contributed to StarLeaf's cloud infrastructure team in various capacities.
+						My first 2 years were spent contributing to a critical call signalling application (mainly C++17); after that I spent another year extending internal-facing web services (mainly Python).
 					</p>
+					<p>Projects of note include:</p>
 					<ul>
-						<li>Foo
-						<li>Bar
-						<li>Baz
+						<li>Signalling for "<a href="https://www.youtube.com/watch?v=eGT_-7MShjU">Smart Layouts"</a>, improving the composition of multiple video streams for single-screen devices.</li>
+						<li>Backend support for dual 1080p30 video + PC streams.</li>
+						<li>
 					</ul>
 
 					<section id="personal-projects">
