Move interests section

--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
 		</header>
 
 			<main>
-				<section id="headline">
-					<p>
-						I'm a software engineer with four years' experience in the communications industry, specialising in backend development involving distributed systems.
+				<section id="summary">
+					<p class="headline">
+						I'm a software engineer with four years' experience in the communications industry.
 					</p>
 					<p>
 						I currently <a href="#work-element">work for Element</a> on the <a href="https://matrix.org/">Matrix protocol</a>.
 						Before that, I <a href="#work-starleaf">worked at StarLeaf</a> on video conferencing infrastructure.
 						Before <em>that</em>, I was a <a href="#research">mathematics PhD researcher</a>.
 					</p>
+
+					<p>
+						I promise that I have hobbies and am therefore a very interesting person.
+					</p>
+
 				</section>
 
 				<section id="programming">
@@ -75,7 +80,7 @@
 					<p>Some notable projects include:</p>
 					<ul>
 						<li>a <a href="https://github.com/matrix-org/sydent/pulls?q=is%3Apr+sort%3Aupdated-desc+is%3Aclosed+author%3Admrobertson+mypy">comprehensive overhaul</a> of Sydent's type annotations,</li>
-						<li>introducing <a href="https://github.com/matrix-org/synapse">locked dependencies and reproducible builds</a> to <a href="https://github.com/matrix-org/synapse"></a>Synapse'</a>s CI and builds; and</li>
+						<li>introducing <a href="https://github.com/orgs/matrix-org/projects/54">locked dependencies and reproducible builds</a> to Synapse's CI and builds; and</li>
 						<li>debugging and improving the behaviour of Matrix's <a href="https://spec.matrix.org/v1.3/rooms/v10/#state-resolution">consensus algorithm</a>.</li>
 					</ul>
 
@@ -141,10 +146,6 @@
 					</dl>
 				</section>
 
-				<section id="interests">
-					<h3>Interests</h3>
-					I promise that I have hobbies and am therefore a very interesting person.
-				</section>
 			</main>
 			<aside id="contact">
 				<h3>Contact Me</h3>
