Simplify CSS, but put maths in a disclosure

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			Before that, I worked at <a href="https://en.wikipedia.org/wiki/StarLeaf">StarLeaf</a> on their B2B video conferencing backend.
 		</p>
 		<p>
-			I'm most experienced in Python (4 years' commercial experience), C++17 (2 years') and Go (1 year), though I'm not tied to any particular language or ecosystem.
+			I'm most experienced in Python (4 years' commercial experience), C++17 (2 years) and Go (1 year), though I'm not tied to any particular language or ecosystem.
 			It'd be nice to have an excuse to work with Rust, a Lisp, or a functional language.
 		</p>
 
@@ -63,62 +63,65 @@
 			<dd>The software I wrote during my research, to calculate in the Thompson family of groups. It was good for testing ideas, validating calculations and <em>especially</em> good at generating illustrations for my thesis.</dd>
 		</dl>
 
-		<h2>Mathematics</h2>
-		<p>
-			In my previous life, I was a researcher in geometric group theory, supervised by <a href="https://www.mas.ncl.ac.uk/~najd2/">Dr.&nbsp;Andrew Duncan</a> and <a href="https://www.mas.ncl.ac.uk/~nser/">Prof.&nbsp;Sarah Rees</a>.
-			 I was interested in:
-		</p>
-		<ul>
-			<li><a href="https://en.wikipedia.org/wiki/Decision_problem">Decision problems in group theory</a></li>
-			<li>The extended family of <a href="https://en.wikipedia.org/wiki/Thompson_groups">Thompson-like groups</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Automata_theory">Automata theory</a> and <a href="https://en.wikipedia.org/wiki/Formal_language">formal languages</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Hanna_Neumann_conjecture">The Hanna Neumann conjecture</a> (now theorem) and its generalisations</li>
-		</ul>
-		<p>
-			My thesis <em><a href="https://theses.ncl.ac.uk/jspui/handle/10443/4727">Conjugacy and centralisers in Thompson's group <var>T</var></a></em> was accepted in
-			It extends the work of <a href="https://sites.google.com/site/francescomatucci/">Francesco Matucci</a> in <a href="https://arxiv.org/abs/0807.2871">his PhD thesis</a> by
-		</p>
-		<ul>
-			<li>adapting his "stair algorithm" from&nbsp;<var>F</var> to&nbsp;<var>T</var>, and</li>
-			<li>completing his analysis of centralisers in <var>T</var>.</li>
-		</ul>
-		<p>
-			 There's a <a href="downloads/project.pdf">more friendly explanation available here</a>.
-		</p>
-		<p>
-			As part of my research, I wrote a package called <a class="software" href="https://github.com/DMRobertson/thompsons_v">thompson</a> to perform computations in these groups.
-			It's not the fastest or most efficient tool out there&mdash;but it's good enough for testing conjectures.
-			Indeed, it was robust enough to spot a technical error in a preprint!
-			I worked with the authors to fix this before publication proper in
-		</p>
-		<dl>
-			<dt><a href="https://dx.doi.org/10.1142/S0218196716500144">The power conjugacy problem in Higman-Thompson groups</a> (<a href="https://arxiv.org/abs/1503.01032">arχiv</a>). </dt>
-			<dd>with <a href="https://www.nodes.ac.uk/dr-nathan-barker/">Nathan Barker</a> and <a href="https://www.mas.ncl.ac.uk/~najd2/">Andrew Duncan</a>.</dd>
-		</dl>
+		<details>
+			<summary>
+				<h2>Mathematics</h2>
+			</summary>
+			<p>
+				In my previous life, I was a researcher in geometric group theory, supervised by <a href="https://www.mas.ncl.ac.uk/~najd2/">Dr.&nbsp;Andrew Duncan</a> and <a href="https://www.mas.ncl.ac.uk/~nser/">Prof.&nbsp;Sarah Rees</a>.
+				 I was interested in:
+			</p>
+			<ul>
+				<li><a href="https://en.wikipedia.org/wiki/Decision_problem">Decision problems in group theory</a></li>
+				<li>The extended family of <a href="https://en.wikipedia.org/wiki/Thompson_groups">Thompson-like groups</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Automata_theory">Automata theory</a> and <a href="https://en.wikipedia.org/wiki/Formal_language">formal languages</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Hanna_Neumann_conjecture">The Hanna Neumann conjecture</a> (now theorem) and its generalisations</li>
+			</ul>
+			<p>
+				My thesis <em><a href="https://theses.ncl.ac.uk/jspui/handle/10443/4727">Conjugacy and centralisers in Thompson's group <var>T</var></a></em> was accepted in
+				It extends the work of <a href="https://sites.google.com/site/francescomatucci/">Francesco Matucci</a> in <a href="https://arxiv.org/abs/0807.2871">his PhD thesis</a> by
+			</p>
+			<ul>
+				<li>adapting his "stair algorithm" from&nbsp;<var>F</var> to&nbsp;<var>T</var>, and</li>
+				<li>completing his analysis of centralisers in <var>T</var>.</li>
+			</ul>
+			<p>
+				 There's a <a href="downloads/project.pdf">more friendly explanation available here</a>.
+			</p>
+			<p>
+				As part of my research, I wrote a package called <a class="software" href="https://github.com/DMRobertson/thompsons_v">thompson</a> to perform computations in these groups.
+				It's not the fastest or most efficient tool out there&mdash;but it's good enough for testing conjectures.
+				Indeed, it was robust enough to spot a technical error in a preprint!
+				I worked with the authors to fix this before publication proper in
+			</p>
+			<dl>
+				<dt><a href="https://dx.doi.org/10.1142/S0218196716500144">The power conjugacy problem in Higman-Thompson groups</a> (<a href="https://arxiv.org/abs/1503.01032">arχiv</a>). </dt>
+				<dd>with <a href="https://www.nodes.ac.uk/dr-nathan-barker/">Nathan Barker</a> and <a href="https://www.mas.ncl.ac.uk/~najd2/">Andrew Duncan</a>.</dd>
+			</dl>
 
-		<h3>Talks</h3>
-		<p>
-			I ended up giving a variety of talks as a student.
-			Here are some of the highlights.
-		</p>
-		<dl>
-			<dt><a href="downloads/sets/talk.html">The joy of sets</a>. </dt>
-			<dd>A half-hour accessible postgraduate talk, to give a flavour of how sets can be used as a foundation for mathematics.</dd>
+			<h3>Talks</h3>
+			<p>
+				I ended up giving a variety of talks as a student.
+				Here are some of the highlights.
+			</p>
+			<dl>
+				<dt><a href="downloads/sets/talk.html">The joy of sets</a>. </dt>
+				<dd>A half-hour accessible postgraduate talk, to give a flavour of how sets can be used as a foundation for mathematics.</dd>
 
-			<dt><a href="downloads/centralisers_in_T.pdf">On centralisers in Thompson's group <var>T</var></a>. </dt>
-			<dd>A presentation of my thesis's main result, with an introduction to the relevant background and a sketch of its proof.</dd>
+				<dt><a href="downloads/centralisers_in_T.pdf">On centralisers in Thompson's group <var>T</var></a>. </dt>
+				<dd>A presentation of my thesis's main result, with an introduction to the relevant background and a sketch of its proof.</dd>
 
-			<dt><a href="downloads/introduction_to_linux/intro_to_linux.pdf">Introduction to Linux</a>. </dt>
-			<dd>Notes for other postgrad students to get used to Linux. Intended as a guide and a reference, giving students the confidence to use a terminal-only environment.	See also <a href="downloads/introduction_to_linux/demo.tar.gz">the demo files</a> referred to in the notes.</dd>
+				<dt><a href="downloads/introduction_to_linux/intro_to_linux.pdf">Introduction to Linux</a>. </dt>
+				<dd>Notes for other postgrad students to get used to Linux. Intended as a guide and a reference, giving students the confidence to use a terminal-only environment.	See also <a href="downloads/introduction_to_linux/demo.tar.gz">the demo files</a> referred to in the notes.</dd>
 
-			<dt><a href="downloads/fractals.pdf">A spotter's guide to fractals</a>. </dt>
-			<dd>A half-hour accessible postgraduate talk discussing fractals, trying to explain why Mandelbrot found them so engaging.</dd>
-		</dl>
+				<dt><a href="downloads/fractals.pdf">A spotter's guide to fractals</a>. </dt>
+				<dd>A half-hour accessible postgraduate talk discussing fractals, trying to explain why Mandelbrot found them so engaging.</dd>
+			</dl>
+		</details>
 	</main>
 	<aside>
 		<h1>Contact Me</h1>
-		<address>
-			<img src="images/photo_head_2019.jpg" srcset="images/photo_head_2023.jpg 1x,images/photo_head_2023_2x.jpg 2x" alt="Profile photograph from 2023" />
+		<img src="images/photo_head_2019.jpg" srcset="images/photo_head_2023.jpg 1x,images/photo_head_2023_2x.jpg 2x" alt="Profile photograph from 2023" />
 			<p>
 			📧 <a class="email" href="mailto:david.m.robertson1@gmail.com" title="Personal email address">david.m.robertson1@gmail.com</a>
 			<br>
@@ -126,7 +129,6 @@
 			<br>
 			LinkedIn: <a href="https://www.linkedin.com/in/davidmrobertson1">davidmrobertson1</a>
 			</p>
-		</address>
 	</aside>
 </body>
 </html>
